ubuntu-sleeper-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
  labels:
    app: ubuntu-sleeper
spec:
  containers:
    - image: ubuntu
      command:
        - "sleep"
        - "604800"
      imagePullPolicy: IfNotPresent
      name: ubuntu
  restartPolicy: Always
