ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60s"
spec:
  ingressClassName: nginx
  rules:
    - host: "echo.eks.ninja"
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echo-service
                port:
                  name: http
    - host: "*.eks.ninja"
      http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo-service
                port:
                  name: http
